[package]
name = "picosystem_games"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "0.2"
embedded-time = "0.12"
pico = { git = "https://github.com/rp-rs/rp-hal.git", branch="main" }
rp2040-boot2 = { git = "https://github.com/rp-rs/rp2040-boot2-rs", branch="main" }
rp2040-hal = { git = "https://github.com/rp-rs/rp-hal", branch="main", features=["rt"] }
rp2040-pac = { git = "https://github.com/rp-rs/rp2040-pac.git" }
log = "0.4"
embedded-graphics = "0.7"
oorandom = "11.*"
heapless = "0.7"
picosystem = { path = "../picosystem" }
