[package]
name = "picosystem_games"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
embedded-hal = "0.2.7"
embedded-time = "0.12.1"
rp-pico = { git = "https://github.com/rp-rs/rp-hal.git", branch="main" }
rp2040-boot2 = { git = "https://github.com/rp-rs/rp2040-boot2-rs", branch="main" }
rp2040-hal = { git = "https://github.com/rp-rs/rp-hal", branch="main", features=["rt"] }
rp2040-pac = { git = "https://github.com/rp-rs/rp2040-pac.git" }
log = "0.4.14"
embedded-graphics = "0.7.1"
oorandom = "11.1.3"
heapless = "0.7.10"
picosystem = { path = "../picosystem" }
micromath = { version = "2.0.0", features = ["vector"] }
picosystem_macros = { path = "../picosystem_macros" }
hash32 = "0.2.1"
