[package]
name = "picosystem_games"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
embedded-hal = "0.2.7"
fugit = "0.3.5"
rp-pico = "0.7"
rp2040-boot2 = "0.3"
rp2040-hal = "0.8"
rp2040-pac = "0.4"
log = "0.4.14"
embedded-graphics = "0.8.0"
oorandom = "11.1.3"
heapless = "0.7.10"
picosystem = { path = "../picosystem" }
micromath = { version = "2.0.0", features = ["vector"] }
picosystem_macros = { path = "../picosystem_macros" }
hash32 = "0.2.1"
u8g2-fonts = { version = "0.3.0", features = ["embedded_graphics_textstyle"] }
