[package]
name = "picosystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
wait-for-serial = []

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "0.2"
embedded-time = "0.12"
pico = { git = "https://github.com/rp-rs/rp-hal.git", branch="main" }
rp2040-boot2 = { git = "https://github.com/rp-rs/rp2040-boot2-rs", branch="main" }
rp2040-hal = { git = "https://github.com/rp-rs/rp-hal", branch="main", features=["rt"] }
rp2040-pac = { git = "https://github.com/rp-rs/rp2040-pac.git" }
usb-device = "0.2"
usbd-hid = "0.5"
usbd-serial = "0.1"
log = "0.4"
display-interface = "0.4"
display-interface-spi = "0.4"
embedded-graphics = "0.7"
st7789 = "0.6"
oorandom = "11.*"
heapless = "0.7"
picosystem_compressor = { path = "../compressor" }

[dev-dependencies]
picosystem_macros = { path = "../picosystem_macros" }
hash32 = "0.2"
