[package]
name = "picosystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
wait-for-serial = []

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
embedded-hal = "0.2.7"
embedded-time = "0.12.1"
rp-pico = { git = "https://github.com/rp-rs/rp-hal.git", branch="main" }
rp2040-boot2 = { git = "https://github.com/rp-rs/rp2040-boot2-rs", branch="main" }
rp2040-hal = { git = "https://github.com/rp-rs/rp-hal", branch="main", features=["rt"] }
rp2040-pac = { git = "https://github.com/rp-rs/rp2040-pac.git" }
usb-device = "0.2.8"
usbd-hid = "0.5.2"
usbd-serial = "0.1.1"
log = "0.4.14"
display-interface = "0.4.1"
display-interface-spi = "0.4.1"
embedded-graphics = "0.7.1"
st7789 = "0.6.1"
oorandom = "11.1.3"
heapless = "0.7.10"
picosystem_compressor = { path = "../compressor" }

[dev-dependencies]
picosystem_macros = { path = "../picosystem_macros" }
