[package]
name = "picosystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
wait-for-serial = []

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
embedded-hal = "0.2.7"
fugit = "0.3.5"
rp-pico = "0.7.0"
rp2040-boot2 = "0.3.0"
rp2040-hal = "0.8.2"
rp2040-pac = "0.4.0"
usb-device = "0.2.8"
usbd-hid = "0.6.1"
usbd-serial = "0.1.1"
log = "0.4.14"
display-interface = "0.4.1"
display-interface-spi = "0.4.1"
embedded-graphics = "0.8.0"
st7789 = "0.7.0"
oorandom = "11.1.3"
heapless = "0.7.10"
picosystem_compressor = { path = "../compressor" }

[dev-dependencies]
picosystem_macros = { path = "../picosystem_macros" }
