cargo-features = ["edition2021"]

[package]
name = "picosystem_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
log = "0.4.14"
image = "0.24.1"
structopt = "0.3.26"
rustfmt-wrapper = "0.1.0"
glob = "0.3.0"
syn = "1.0.86"
picosystem_compressor = { path = "../compressor" }
picosystem = { path = "../picosystem" }
tiled = "0.10.0"
